static/css/style.css
.welcome-page {
  background-color: #f1e0d4df;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.welcome-page .overlap-wrapper {
  background-color: #f1e0d4df;
  width: 100%;
  height: 100%;
}

.welcome-page .overlap {
  position: relative;
  height: 832px;
}
nav {
  background-color: #433128; /* Background color for the navigation bar */
  text-align: center; /* Center the buttons horizontally */
  padding-bottom: 20px;
  padding-top: 20px;
  z-index: 100;
  position: relative;
}

.welcome-page .overlap-group {
  position: relative;
  width: 100%;
  height: 100%;
  top: -90px;
  left: 0;
}

.welcome-page .text-wrapper {
  position: absolute;
  width: 30%;
  height: 25%;
  top: 60%;
  left: 35%;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-weight: 500;
  color: #423127;
  font-size: 25px;
  text-align: center;
  letter-spacing: 0.6px;
  line-height: 25px;
  
}

.welcome-page .vector {
  position: absolute;
  width: 30%;
  height: 40%;
  bottom: 0px;
  right: 0px;
}

.welcome-page .img {
  position: absolute;
  width: 28%;
  height: 28%;
  bottom: 0px;
  right: 0px;
}

.welcome-page .vector-2 {
  position: absolute;
  width: 20%;
  height: 20%;
  bottom: 0px;
  right: 0px;
}

.welcome-page .vector-3 {
  position: absolute;
  width: 30%;
  height: 50%;
  top: 0px;
  left: 0px;
}

.welcome-page .vector-4 {
  position: absolute;
  width: 25%;
  height: 45%;
  top: 0px;
  left: 0px;
  float: left;
}

.welcome-page .div {
  position: absolute;
  width: 100%;
  height: 30%;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-weight: 700;
  color: #423127;
  font-size: 80px;
  text-align: center;
  letter-spacing: 1.6px;
  line-height: 10px;
}

.welcome-page .group {
  position: absolute;
  width: 66px;
  height: 91px;
  top: 30%;
  left: 67%;
}

.welcome-page .group-2 {
  position: absolute;
  width: 66px;
  height: 91px;
  top: 30%;
  left: 28%;
}

.welcome-page .frame {
  position: absolute;
  width: 366px;
  height: 40px;
  top: 0;
  left: 0;
  transform: translate(-50%, 0%);
}


.welcome-page .group-3 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
}

.welcome-page .hackgt-logo {
  position: absolute;
  width: 18%;
  height: 35%;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.welcome-page .overlap-2 {
  position: absolute;
  width: 147px;
  height: 149px;
  top: 497px;
  left: 184px;
}

.welcome-page .vector-5 {
  position: absolute;
  width: 147px;
  height: 98px;
  top: 51px;
  left: 0;
}

.welcome-page .vector-6 {
  position: absolute;
  width: 87px;
  height: 60px;
  top: 0;
  left: 10px;
}

.welcome-page .overlap-group-2 {
  position: absolute;
  width: 117px;
  height: 106px;
  top: 244px;
  left: 1021px;
}

.welcome-page .vector-7 {
  position: absolute;
  width: 25px;
  height: 92px;
  top: 43px;
  left: 55px;
}

.welcome-page .vector-8 {
  position: absolute;
  width: 96px;
  height: 75px;
  top: 50px;
  left: 75px;
}

.welcome-page .vector-9 {
  position: absolute;
  width: 104px;
  height: 106px;
  top: 40px;
  left: 80px;
}

.welcome-page .vector-10 {
  position: absolute;
  width: 23px;
  height: 21px;
  top: 57px;
  left: 90px;
}

.BUTTON-TO-MOVE-ON {
  position: absolute;
  top: 69%;
  left: 555px;
  z-index: 1; /* Ensure it's on top of other elements */
  display: flex;
  justify-content: center;
  align-items: center;
}

.button {
  margin: 50px;
  background-color: #433128;
  color: #C9AC9C;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: x-large;
  padding: 15px 30px;
  border: none;
  border-radius: 20px;
  cursor: pointer
}

.button:hover {
  background-color: #9A7966; /* Change the hover color */
}


ul {
  list-style: none; /* Remove bullets from the navigation list */
  padding: 0%;
  padding-top: 10px;
  padding-bottom: 40px;
}

li {
  display: inline; /* Display list items horizontally */
  margin-right: 20px; /* Add spacing between navigation items */
  margin-top: 20%;

}

#SPECIAL-ABOUT{
  color: #433128; /* Text color for navigation links */
  text-decoration: none; /* Remove underlines from links */
  text-align: center;
  padding: 10px 20px; /* Add padding to create button-like appearance */
  border: 1px solid #C9AC9C; /* Add border to the buttons */
  border-radius: 20px; /* Round the corners */
  background-color: #C9AC9C; /* Background color for the buttons */
  cursor: pointer;
  float: right;
  margin-left: 20px;
  margin-right: 20px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

#SPECIAL-ABOUT:hover {
  background-color: #775E50; /* Change the background color on hover */
  color: #C9AC9C
}

a3 {
  padding: 10px 20px;
  padding-bottom: 20px;
  padding-top: 0px;
  float: left;
  background-color: #433128;
  cursor: pointer;
}

